--- a/cluster.yaml
+++ b/cluster.yaml
@@ -1,107 +1,115 @@
 kind: ClusterConfiguration
-apiVersion: konvoy.mesosphere.io/v1beta1
+apiVersion: konvoy.mesosphere.io/v1beta2
 metadata:
   name: kbsys-k8s
-  creationTimestamp: "2020-07-08T03:07:15Z"
+  creationTimestamp: "2020-09-21T03:59:13Z"
 spec:
+  imageRegistries:
+    - server: https://www.kb-sys.co.kr
+      username: "admin"
+      password: "admin1234"
+      default: true
   kubernetes:
-    version: 1.16.8
+    version: 1.17.11
     controlPlane:
-      controlPlaneEndpointOverride: "192.168.0.217:6443"
+      controlPlaneEndpointOverride: "192.168.0.230:6443"
       certificate: {}
       keepalived: {}
     networking:
-      podSubnet: 10.0.10.10/16
+      podSubnet: 192.168.100.0/24
       serviceSubnet: 10.0.0.0/18
+      iptables:
+        addDefaultRules: false
     cloudProvider:
       provider: none
     admissionPlugins:
       enabled:
-      - AlwaysPullImages
-      - NodeRestriction
+        - AlwaysPullImages
+        - NodeRestriction
   containerNetworking:
     calico:
-      version: v3.13.1
+      version: v3.13.5
       encapsulation: ipip
       mtu: 1480
   containerRuntime:
     containerd:
-      version: 1.2.6
+      version: 1.3.7
   osPackages:
-    enableAdditionalRepositories: true
+    enableAdditionalRepositories: false
   nodePools:
-  - name: worker
+    - name: worker
   addons:
-  - configRepository: https://github.com/mesosphere/kubernetes-base-addons
-    configVersion: stable-1.16-1.2.0
-    addonsList:
-    - name: cert-manager
-      enabled: true
-    - name: dashboard
-      enabled: true
-    - name: defaultstorageclass-protection
-      enabled: true
-    - name: dex
-      enabled: true
-    - name: dex-k8s-authenticator
-      enabled: true
-    - name: elasticsearch
-      enabled: false
-    - name: elasticsearch-curator
-      enabled: false
-    - name: elasticsearchexporter
-      enabled: false
-    - name: external-dns
-      enabled: false
-    - name: flagger
-      enabled: false
-    - name: fluentbit
-      enabled: true
-    - name: gatekeeper
-      enabled: true
-    - name: istio # Istio is currently in Preview
-      enabled: false
-    - name: kibana
-      enabled: false
-    - name: konvoyconfig
-      enabled: true
-    - name: kube-oidc-proxy
-      enabled: true
-    - name: localvolumeprovisioner
-      enabled: true
-    - name: metallb
-      enabled: true
-      values: |
-        configInline:
-          address-pools:
-          - name: default
-            protocol: layer2
-            # configure addresses for your network
-            addresses: [192.168.0.215-192.168.0.216]
-    - name: nvidia
-      enabled: false
-    - name: opsportal
-      enabled: true
-    - name: prometheus
-      enabled: true
-    - name: prometheusadapter
-      enabled: true
-    - name: reloader
-      enabled: true
-    - name: traefik
-      enabled: true
-    - name: traefik-forward-auth
-      enabled: true
-    - name: velero
-      enabled: true
-  - configRepository: https://github.com/mesosphere/kubeaddons-dispatch
-    configVersion: stable-1.16-1.0.0
-    addonsList:
-    - name: dispatch
-      enabled: false
-  - configRepository: https://github.com/mesosphere/kubeaddons-kommander
-    configVersion: stable-1.16-1.0.0
-    addonsList:
-    - name: kommander
-      enabled: true
-  version: v1.4.2
+    - configRepository: /opt/konvoy/artifacts/kubeaddons-dispatch
+      configVersion: stable-1.17-1.2.2
+      addonsList:
+        - name: dispatch
+          enabled: false
+    - configRepository: /opt/konvoy/artifacts/kubeaddons-kommander
+      configVersion: stable-1.17-1.1.2
+      addonsList:
+        - name: kommander
+          enabled: false
+    - configRepository: /opt/konvoy/artifacts/kubernetes-base-addons
+      configVersion: stable-1.17-2.2.0
+      addonsList:
+        - name: cert-manager
+          enabled: true
+        - name: dashboard
+          enabled: true
+        - name: defaultstorageclass-protection
+          enabled: true
+        - name: dex
+          enabled: true
+        - name: dex-k8s-authenticator
+          enabled: true
+        - name: elasticsearch
+          enabled: false
+        - name: elasticsearch-curator
+          enabled: false
+        - name: elasticsearchexporter
+          enabled: false
+        - name: external-dns
+          enabled: false
+        - name: flagger
+          enabled: false
+        - name: fluentbit
+          enabled: true
+        - name: gatekeeper
+          enabled: true
+        - name: istio # Istio is currently in Preview
+          enabled: false
+        - name: kibana
+          enabled: false
+        - name: konvoyconfig
+          enabled: true
+        - name: kube-oidc-proxy
+          enabled: true
+        - name: localvolumeprovisioner
+          enabled: true
+        - name: metallb
+          enabled: true
+          values: |
+            configInline:
+              address-pools:
+              - name: default
+                protocol: layer2
+                # configure addresses for your network
+                addresses: [192.168.0.231-192.168.0.233]
+        - name: nvidia
+          enabled: false
+        - name: opsportal
+          enabled: true
+        - name: prometheus
+          enabled: false
+        - name: prometheusadapter
+          enabled: false
+        - name: reloader
+          enabled: true
+        - name: traefik
+          enabled: true
+        - name: traefik-forward-auth
+          enabled: true
+        - name: velero
+          enabled: true
+  version: v1.5.2
+
