--- a/cluster.yaml
+++ b/cluster.yaml
@@ -1,8 +1,8 @@
 kind: ClusterConfiguration
-apiVersion: konvoy.mesosphere.io/v1beta2
+apiVersion: konvoy.mesosphere.io/v1beta1
 metadata:
-  name: kbsys-k8s
-  creationTimestamp: "2020-09-21T03:59:13Z"
+  name: k8s-test
+  creationTimestamp: "2021-03-08T06:47:39Z"
 spec:
   imageRegistries:
     - server: https://www.kb-sys.co.kr
@@ -10,106 +10,109 @@ spec:
       password: "admin1234"
       default: true
   kubernetes:
-    version: 1.17.11
+    version: 1.16.8
     controlPlane:
-      controlPlaneEndpointOverride: "192.168.0.230:6443"
+      controlPlaneEndpointOverride: "192.168.0.75:6443"
       certificate: {}
       keepalived: {}
     networking:
-      podSubnet: 192.168.100.0/24
+      podSubnet: 10.0.0.10/16
       serviceSubnet: 10.0.0.0/18
-      iptables:
-        addDefaultRules: false
     cloudProvider:
       provider: none
     admissionPlugins:
       enabled:
-        - AlwaysPullImages
-        - NodeRestriction
+      - AlwaysPullImages
+      - NodeRestriction
   containerNetworking:
     calico:
-      version: v3.13.5
+      version: v3.13.1
       encapsulation: ipip
       mtu: 1480
   containerRuntime:
     containerd:
-      version: 1.3.7
+      version: 1.2.6
   osPackages:
-    enableAdditionalRepositories: false
+    enableAdditionalRepositories: true
   nodePools:
-    - name: worker
+  - name: worker
   addons:
-    - configRepository: /opt/konvoy/artifacts/kubeaddons-dispatch
-      configVersion: stable-1.17-1.2.2
-      addonsList:
-        - name: dispatch
-          enabled: false
-    - configRepository: /opt/konvoy/artifacts/kubeaddons-kommander
-      configVersion: stable-1.17-1.1.2
-      addonsList:
-        - name: kommander
-          enabled: false
-    - configRepository: /opt/konvoy/artifacts/kubernetes-base-addons
-      configVersion: stable-1.17-2.2.0
-      addonsList:
-        - name: cert-manager
-          enabled: true
-        - name: dashboard
-          enabled: true
-        - name: defaultstorageclass-protection
-          enabled: true
-        - name: dex
-          enabled: true
-        - name: dex-k8s-authenticator
-          enabled: true
-        - name: elasticsearch
-          enabled: false
-        - name: elasticsearch-curator
-          enabled: false
-        - name: elasticsearchexporter
-          enabled: false
-        - name: external-dns
-          enabled: false
-        - name: flagger
-          enabled: false
-        - name: fluentbit
-          enabled: true
-        - name: gatekeeper
-          enabled: true
-        - name: istio # Istio is currently in Preview
-          enabled: false
-        - name: kibana
-          enabled: false
-        - name: konvoyconfig
-          enabled: true
-        - name: kube-oidc-proxy
-          enabled: true
-        - name: localvolumeprovisioner
-          enabled: true
-        - name: metallb
-          enabled: true
-          values: |
-            configInline:
-              address-pools:
-              - name: default
-                protocol: layer2
-                # configure addresses for your network
-                addresses: [192.168.0.231-192.168.0.233]
-        - name: nvidia
-          enabled: false
-        - name: opsportal
-          enabled: true
-        - name: prometheus
-          enabled: false
-        - name: prometheusadapter
-          enabled: false
-        - name: reloader
-          enabled: true
-        - name: traefik
-          enabled: true
-        - name: traefik-forward-auth
-          enabled: true
-        - name: velero
-          enabled: true
-  version: v1.5.2
-
+  - configRepository: https://github.com/mesosphere/kubeaddons-dispatch
+    configVersion: stable-1.16-1.0.0
+    helmRepository:
+       image: mesosphere/konvoy-addons-chart-repo:v1.4.2
+    addonsList:
+    - name: dispatch
+      enabled: false
+  - configRepository: https://github.com/mesosphere/kubeaddons-kommander
+    configVersion: stable-1.16-1.0.0
+    helmRepository:
+       image: mesosphere/konvoy-addons-chart-repo:v1.4.2
+    addonsList:
+    - name: kommander
+      enabled: false
+  - configRepository: https://github.com/mesosphere/kubernetes-base-addons
+    configVersion: stable-1.16-1.2.0
+    helmRepository:
+       image: mesosphere/konvoy-addons-chart-repo:v1.4.2
+    addonsList:
+    - name: cert-manager
+      enabled: true
+    - name: dashboard
+      enabled: true
+    - name: defaultstorageclass-protection
+      enabled: true
+    - name: dex
+      enabled: true
+    - name: dex-k8s-authenticator
+      enabled: true
+    - name: elasticsearch
+      enabled: false
+    - name: elasticsearch-curator
+      enabled: false
+    - name: elasticsearchexporter
+      enabled: false
+    - name: external-dns
+      enabled: false
+    - name: flagger
+      enabled: false
+    - name: fluentbit
+      enabled: false
+    - name: gatekeeper
+      enabled: true
+    - name: istio # Istio is currently in Preview
+      enabled: false
+    - name: kibana
+      enabled: false
+    - name: konvoyconfig
+      enabled: true
+    - name: kube-oidc-proxy
+      enabled: true
+    - name: localvolumeprovisioner
+      enabled: true
+    - name: metallb
+      enabled: true
+      values: |
+        configInline:
+          address-pools:
+          - name: default
+            protocol: layer2
+            # configure addresses for your network
+            addresses: [192.168.0.76-192.168.0.78]
+    - name: nvidia
+      enabled: false
+    - name: opsportal
+      enabled: true
+    - name: prometheus
+      enabled: false
+    - name: prometheusadapter
+      enabled: false
+    - name: reloader
+      enabled: true
+    - name: traefik
+      enabled: true
+    - name: traefik-forward-auth
+      enabled: true
+    - name: velero
+      enabled: true
+  version: v1.4.2
